--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "cors": "2.8.5",
     "dotenv": "16.0.3",
     "express": "4.18.2",
+    "http-errors": "2.0.0",
     "pg": "8.7.1",
     "pg-hstore": "2.3.4",
-    "sequelize": "6.6.5"
+    "sequelize": "6.6.5",
+    "zod": "3.20.6"
   }
 }
